-fixed the image stretching on consultant profile pages. -removed unnecessary styles form the consultant profile page. -changed the type of the consultant name to be a h4 heading and added a space beneath the heading.

--- a/site/web/css/custom-styles.css
+++ b/site/web/css/custom-styles.css
@@ -22,12 +22,12 @@ html, body {
 
 .image-dimensions180 {
     width: 180px !important;
-    height: 180px !important;
+    height: 100% !important;
 }
 
 .image-dimensions120 {
     width: 120px !important;
-    height: 120px !important;
+    height: 100% !important;
 }
 
 #wrap {
